iac/aws/cloudformation/ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation template to create an EC2 instance.

Parameters:
  environment:
    Description: environment type
    Type: String
    AllowedValues:
      - dev
      - stage
      - prod
    Default: dev

  product:
    Description: name of the product or part of the project
    Type: String
    Default: impressico

  service:
    Description: Name of the Service
    Type: String
    Default: ec2

  keyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: String
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.

Mappings:
  envToinstanc:
    dev:
      InstanceType: t3.micro
      ImageId: ami-0388e3ada3d9812da
    stage:
      InstanceType: t3.micro
      ImageId: ami-0388e3ada3d9812da
    prod:
      InstanceType: t3.micro
      ImageId: ami-0388e3ada3d9812da

Resources:
  securityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ec2 allowing SSH and RDS access
      VpcId:
        Fn::ImportValue: !Sub "${environment}-${product}-vpc"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            Fn::ImportValue: !Sub "${environment}-${product}-vpcCidir"
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-securityGroup

  instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !FindInMap [envToinstanc, !Ref environment, InstanceType]
      ImageId: !FindInMap [envToinstanc, !Ref environment, ImageId]
      SubnetId:
        Fn::ImportValue: !Sub "${environment}-${product}-privateSubnet2"
      IamInstanceProfile:
        Fn::ImportValue: !Sub "${environment}-${product}-${service}-instance-profile"
      SecurityGroupIds:
        - !Ref securityGroup
      KeyName: !Ref keyName
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-${service}
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt update -y && apt install docker.io -y
          apt install -y awscli

Outputs:
  securityGroupId:
    Description: The Security Group ID for the ec2
    Value: !Ref securityGroup
    Export:
      Name: !Sub "${environment}-${product}-securityGroup"

  instanceId:
    Description: The Instance ID of the ec2
    Value: !Ref instance
    Export:
      Name: !Sub "${environment}-${product}-instance"
