iac/aws/cloudformation/vpc.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation template to create a VPC with public/private subnets and NAT Gateway

Parameters:
  environment:
    Description: Environment type
    Type: String
    AllowedValues:
      - dev
      - stage
      - prod
    Default: dev

  product:
    Description: Name of the product or part of the project
    Type: String
    Default: impressico

  service:
    Description: Name of the Service
    Type: String
    Default: vpc

Resources:
  vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-${service}

  internetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-igw

  gatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref vpc
      InternetGatewayId: !Ref internetGateway

  publicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Select [1, !Cidr [!GetAtt vpc.CidrBlock, 5, 8]]
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-publicSubnet1

  publicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Select [3, !Cidr [!GetAtt vpc.CidrBlock, 5, 8]]
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-publicSubnet2

  privateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Select [2, !Cidr [!GetAtt vpc.CidrBlock, 5, 8]]
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-privateSubnet1

  privateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Select [4, !Cidr [!GetAtt vpc.CidrBlock, 5, 8]]
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-privateSubnet2

  natEip:
    Type: AWS::EC2::EIP
    DependsOn: gatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-nat-eip

  natGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt natEip.AllocationId
      SubnetId: !Ref publicSubnet1 
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-natGateway

  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-publicRouteTable

  publicDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: gatewayAttachment
    Properties:
      RouteTableId: !Ref publicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetGateway

  publicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet1
      RouteTableId: !Ref publicRouteTable

  publicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet2
      RouteTableId: !Ref publicRouteTable

  privateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
        - Key: Name
          Value: !Sub ${environment}-${product}-privateRouteTable

  privateDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref privateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref natGateway 

  privateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet1
      RouteTableId: !Ref privateRouteTable

  privateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet2
      RouteTableId: !Ref privateRouteTable

Outputs:
  vpcId:
    Description: VPC ID
    Value: !Ref vpc
    Export:
      Name: !Sub "${environment}-${product}-vpc"

  vpcCidr:
    Description: VPC CIDR block
    Value: !GetAtt vpc.CidrBlock
    Export:
      Name: !Sub "${environment}-${product}-vpcCidr"

  publicSubnet1Id:
    Description: Public Subnet 1 ID
    Value: !Ref publicSubnet1
    Export:
      Name: !Sub "${environment}-${product}-publicSubnet1"

  publicSubnet2Id:
    Description: Public Subnet 2 ID
    Value: !Ref publicSubnet2
    Export:
      Name: !Sub "${environment}-${product}-publicSubnet2"

  privateSubnet1Id:
    Description: Private Subnet 1 ID
    Value: !Ref privateSubnet1
    Export:
      Name: !Sub "${environment}-${product}-privateSubnet1"

  privateSubnet2Id:
    Description: Private Subnet 2 ID
    Value: !Ref privateSubnet2
    Export:
      Name: !Sub "${environment}-${product}-privateSubnet2"

  natGatewayId:
    Description: NAT Gateway ID
    Value: !Ref natGateway
    Export:
      Name: !Sub "${environment}-${product}-natGateway"
